dropdown js ok reste condi

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -9,7 +9,7 @@
 {% endblock %}
 
     <!-- SLIDER DES DERNIERES CREATIONS -->
-    <div class="slider marge">
+    <div class="slider">
         <ul class="slides">
             <li>
                 <a href="#" target="_blank">
