--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -22,6 +22,9 @@
                         <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
                         <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
                         <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                        <li>
+                            <a class="btn dropdown-button navbutton fsize" href="#!" data-activates="dropdown2">Contact</a>
+                        </li>
                     </ul>
                 </div>
             </div>
