--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -12,6 +12,7 @@
         <link href="https://fonts.googleapis.com/css?family=Alex+Brush|Allura|Dancing+Script|Great+Vibes|Lobster|Pacifico|Parisienne|Sacramento|Tangerine" rel="stylesheet">
         <!-- ICONS -->
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <stylesheets>
         {% block stylesheets %}{% endblock %}
@@ -28,10 +29,12 @@
 
             {#<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>#}
             <script src="{{ asset('js/jquery-3.2.1.min.js') }}"></script>
-            <script src="{{ asset('js/jquery-ui.min.js') }}"></script>
+            {#<script src="{{ asset('js/jquery-ui.min.js') }}"></script>#}
             {#<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/js/materialize.min.js"></script>#}
             <script src="{{ asset('js/materialize.js') }}"></script>
             <script src="{{ asset('js/main.js') }}"></script>
+
+
 
         {% endblock %}
     </body>
