--- a/web/css/main.css
+++ b/web/css/main.css
@@ -130,6 +130,9 @@ p{
         font-size: 40px !important;
     }
 
+    .marginright{
+        margin-right: 7%;
+    }
 
     /*******************************************************/
     /*******************************************************/
@@ -243,7 +246,9 @@ p{
 /*******************************************************/
 
 .box-size{
-    width: 100px;
+    display: flex;
+    float: right;
+    width: 10%;
 }
 
 .disposition{
@@ -257,6 +262,6 @@ p{
 /*******************************************************/
 /*******************************************************/
 
-.disposition2{
+.disposition{
     display: flex;
 }
