--- a/app/Resources/views/header/index.html.twig
+++ b/app/Resources/views/header/index.html.twig
@@ -64,36 +64,78 @@
 
             .float-right{
                 margin-top: 0.5%;
-                float: right !important;
+                margin-left: 70%;
             }
+
+            .top{
+                margin-top: 1.3%;
+            }
+
+
 
         </style>
 
     <div class="navbarjs">
         <a href="{{ path('homepage') }}" class="brand-logo decal">Acceuil</a>
         <div class="float-right">
+
             {% for header in headers %}
                 <div class="dropdown1">
                     <button class="dropbtn" onclick="myFunction{{ header.id }}()">{{ header.name }}
                         <i class="fa fa-caret-down"></i>
                     </button>
+                    <div class="dropdown-content1" id="myDropdown{{ header.id }}">
+                        {% for gallery in galleries %}
+                            {% if header == gallery.header %}
 
-                        <div class="dropdown-content1" id="myDropdown{{ header.id }}">
-                            {% for gallery in galleries %}
-                                {% if header == gallery.header %}
-                                    <a href="{{ path('subgallery_index', { 'id': gallery.id }) }}" class="box-size">{{ gallery.name }}</a>
+                                <div class="disposition">
+                                    <a href="{{ path('subgallery_index', { 'id': gallery.id }) }}" class="">{{ gallery.name }}</a> <!-- class box-size -->
+                                </div>
+                                {# ################# Si L'ADMIN EST ACTIF ########################### #}
+
+                                {% if is_granted('ROLE_ADMIN') %}
+                                    <div class="">
+                                        <a href="{{ path('gallery_edit', { 'id': gallery.id }) }}" class="waves-effect icon-background4 orange darken-2 box-size"><i class=" material-icons bouton-new-gallery-icon">add</i></a>
+                                    </div>
                                 {% endif %}
-                            {% endfor %}
-                        </div>
+                                {# ################################################################## #}
 
+                            {% endif %}
+                        {% endfor %}
+
+                        {# ################# Si L'ADMIN EST ACTIF ###########################c#}
+                        {% if is_granted('ROLE_ADMIN') %}
+
+                            <a href="{{ path('gallery_new') }}" class="waves-effect waves-light green darken-1">
+                                <i class=" material-icons white-text large material-icons-size">add</i>
+                            </a>
+
+                        {% endif %}
+                        {# ################################################################## #}
+
+                    </div>
                  </div>
             {% endfor %}
+
         </div>
+
+        {# ################# Si L'ADMIN EST ACTIF ########################### #}
+        {% if is_granted('ROLE_ADMIN') %}
+            <div class="float-right top">
+                <a href="{{ path('header_new') }}" class="btn-floating btn-large waves-effect green darken-1 bouton-new-gallery">
+                    <i class=" material-icons bouton-new-gallery-icon">add</i>
+                </a>
+                <a href="{{ path('header_show_all') }}" class="btn-floating btn-large waves-effect icon-background6 bouton-new-gallery">
+                    <i class="material-icons bouton-new-gallery-icon">edit</i>
+                </a>
+            </div>
+        {% endif %}
+        {# ################################################################## #}
+
     </div>
     <div class="nav-content backcontent center">
     <span class="nav-title f-size">Nathalie Sian Création</span>
     </div>
-
 
     <script>
         /* When the user clicks on the button,
@@ -103,102 +145,18 @@
                 document.getElementById("myDropdown{{ header.id }}").classList.toggle("show");
         }
         {% endfor %}
-        // fermer le dropdown lorque l'on click en dehors
+        // fermer le dropdown lorque l'on click sur le bt ouvert
         window.onclick = function(e) {
             if (!e.target.matches('.dropbtn')) {
                 {% for header in headers %}
                     var myDropdown = document.getElementById("myDropdown{{ header.id }}");
+
+                    if (myDropdown.classList.contains('show')) {
+                        myDropdown.classList.remove('show');
+                    }
                 {% endfor %}
-                if (myDropdown.classList.contains('show')) {
-                    myDropdown.classList.remove('show');
-                }
             }
         }
-
     </script>
-
-
-
-
-
-
-    {#<p>-----------------------------------------------------------------------------------------------</p>#}
-
-    {#<div class="navbar-fixed">#}
-        {#<nav class="nav-extended">#}
-            {#<div class="nav-wrapper backnav">#}
-                {#<a href="{{ path('homepage') }}" class="brand-logo decal">Acceuil</a>#}
-
-                {#<ul class="right hide-on-med-and-down">#}
-
-                     {################### Si L'ADMIN EST ACTIF #############################}
-                    {#{% if is_granted('ROLE_ADMIN') %}#}
-                        {#<li class="disposition">#}
-                            {#<a href="{{ path('header_new') }}" class="btn-floating btn-large waves-effect waves-light green darken-1 bouton-new-gallery">#}
-                                {#<i class=" material-icons bouton-new-gallery-icon">add</i>#}
-                            {#</a>#}
-                        {#</li>#}
-                        {#<li>#}
-                            {#<a href="{{ path('header_show_all') }}">#}
-                                {#<button class=" btn-floating btn-large waves-effect icon-background6 bouton-new-gallery" type="submit" name="action">#}
-                                    {#<i class="material-icons bouton-new-gallery-icon">edit</i>#}
-                                {#</button>#}
-                            {#</a>#}
-                        {#</li>#}
-                    {#{% endif %}#}
-                     {######################################################################}
-
-                    {#<li>#}
-     {#1ere BOUCLE POUR LISTER LES CATEGORIES DE LA NAVBAR#}
-                        {#{% for header in headers %}#}
-
-                        {#<a class="btn dropdown-button navbutton fsize" href="#!" data-activates="dropdown2">{{ header.name }}</a>#}
-
-                        {#<ul id="dropdown2" class="dropdown-content">#}
-
-     {#2eme BOUCLE IMBRIQUEE POUR LISTER EN FONCTION DES CATEGORIES#}
-                            {#{% for gallery in galleries %}#}
-
-                                {#{% if header == gallery.header %}#}
-                                    {#<li class="disposition">#}
-
-                                        {#<a href="{{ path('subgallery_index', { 'id': gallery.id }) }}" class="box-size">{{ gallery.name }}</a>#}
-
-                                     {################### Si L'ADMIN EST ACTIF #############################}
-
-                                        {#{% if is_granted('ROLE_ADMIN') %}#}
-
-                                            {#<a href="{{ path('gallery_edit', { 'id': gallery.id }) }}" class="waves-effect icon-background4 orange darken-2">éditer</a>#}
-
-                                        {#{% endif %}#}
-                                     {######################################################################}
-
-                                    {#</li>#}
-
-                                {#{% endif %}#}
-                            {#{% endfor %}#}
-
-                                 {################### Si L'ADMIN EST ACTIF #############################}
-                                    {#{% if is_granted('ROLE_ADMIN') %}#}
-                                    {#<li class="center">#}
-                                        {#<a href="{{ path('gallery_new') }}" class="waves-effect waves-light green darken-1">#}
-                                            {#<i class=" material-icons white-text large material-icons-size">add</i>#}
-                                        {#</a>#}
-                                    {#</li>#}
-                                    {#{% endif %}#}
-                                 {######################################################################}
-
-                        {#</ul>#}
-                    {#</li>#}
-
-                    {#{% endfor %}#}
-
-                {#</ul>#}
-            {#</div>#}
-            {#<div class="nav-content backcontent center">#}
-                {#<span class="nav-title f-size">Nathalie Sian Création</span>#}
-            {#</div>#}
-        {#</nav>#}
-    {#</div>#}
 
 {% endblock %}
