--- a/app/Resources/views/subgallery/index.html.twig
+++ b/app/Resources/views/subgallery/index.html.twig
@@ -4,6 +4,7 @@
 
         <tbody>
         {% for subGallery in subGalleries %}
+        {% if Gallery == subGallery.gallery %}
             <tr>
                 <td><a href="{{ path('subgallery_show', { 'id': subGallery.id }) }}">{{ subGallery.id }}</a></td>
                 <td>{{ subGallery.sgallery }}</td>
@@ -18,6 +19,7 @@
                     </ul>
                 </td>
             </tr>
+        {% endif %}
         {% endfor %}
         </tbody>
     </table>
