comment recup id gallery pour subgallery

--- a/app/Resources/views/header/index.html.twig
+++ b/app/Resources/views/header/index.html.twig
@@ -96,7 +96,7 @@
                             {% if header == gallery.header %}
 
                                 <div class="disposition">
-                                    <a href="{{ path('subgallery_index', { 'id': gallery.id }) }}" class="disposition-a1">{{ gallery.name }}</a> <!-- class box-size -->
+                                    <a href="{{ path('list_show', { 'id': gallery.id }) }}" class="disposition-a1">{{ gallery.name }}</a> <!-- class box-size -->
                                 </div>
                                 {# ################# Si L'ADMIN EST ACTIF ########################### #}
 
