--- a/src/CalendarBundle/Resources/views/agenda/show.html.twig
+++ b/src/CalendarBundle/Resources/views/agenda/show.html.twig
@@ -68,30 +68,23 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row calendar-row valign-wrapper">
-                        <div class="col s12 m6 l6 calendar-td valign-wrapper">
-                            <p class="calendar-p valign">Ajouter au slider :</p>
-                        </div>
-                        <div class="col s12 m6 l6">
-                            <p class="calendar-p valign">{% if agenda.slider %}Evènement ajouté{% else %}Evènement non ajouté{% endif %}</p>
-                        </div>
-                    </div>
+                    {#<div class="row calendar-row valign-wrapper">#}
+                        {#<div class="col s12 m6 l6 calendar-td valign-wrapper">#}
+                            {#<p class="calendar-p valign">Ajouter au slider :</p>#}
+                        {#</div>#}
+                        {#<div class="col s12 m6 l6">#}
+                            {#<p class="calendar-p valign">{% if agenda.slider %}Evènement ajouté{% else %}Evènement non ajouté{% endif %}</p>#}
+                        {#</div>#}
+                    {#</div>#}
                     <div class="row">
                         <div class="col s12 m6 l6 calendar-td valign-wrapper">
                             <p class="calendar-p valign">Image du slider :</p>
                         </div>
                         <div class="col s12 m6 l6 center">
-                            <img class="show-image responsive-img" src="{{ asset(agenda.image.path) }}"  alt="{{ agenda.image.alt.translation('fr') }}">
+                            <img class="show-image responsive-img" src="{{ asset(agenda.media.picpath) }}"  alt="{{ agenda.media.picname }}">
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col s12 m6 l6 calendar-td valign-wrapper">
-                            <p class="calendar-p valign">lien vers la page :</p>
-                        </div>
-                        <div class="col s12 m6 l6 center">
-                           <a href="{{ agenda.lien }}">{{ agenda.lien }}</a>
-                        </div>
-                    </div>
+                </div>
                 </div>
 
                 <div class="center">
@@ -101,14 +94,14 @@
                     </a>
 
                     <a class="btn-floating btn-large waves-effect waves-light blue darken-1 modal-action modal-close"
-                       href="{{ path('plate_forme_homepage') }}">
+                       href="{{ path('homepage') }}">
                         <i class="small material-icons">home</i>
                     </a>
                     <a href="{{ path('agenda_show_all') }}">
                         <button class=" btn-floating btn-large waves-effect tooltipped icon-background6" type="submit" name="action"
                                 data-position="bottom"
                                 data-delay="50"
-                                data-tooltip="Accueil">
+                                data-tooltip="Montrer tout">
                             <i class="material-icons">view_list</i>
                         </button>
                     </a>
