--- a/web/css/main.css
+++ b/web/css/main.css
@@ -73,6 +73,23 @@ p{
     font-size: larger;
 }
 
+.plus-icon{
+
+    width: 45px;
+    height: 45px;
+}
+.delete-icon{
+
+    width: 45px;
+    height: 45px;
+}
+.edit-icon{
+
+    width: 45px;
+    height: 45px;
+}
+
+
 
     /*******************************************************/
     /*                                                     */
@@ -264,4 +281,17 @@ p{
 
 .disposition{
     display: flex;
+}
+
+/*******************************************************/
+/*                                                     */
+/*                                                     */
+/*                       LISTE                         */
+/*                                                     */
+/*                                                     */
+/*******************************************************/
+
+.picsize{
+    height: 200px;
+    width: 300px;
 }
