--- a/app/Resources/views/subgallery/new.html.twig
+++ b/app/Resources/views/subgallery/new.html.twig
@@ -22,7 +22,6 @@
                             {{ form_errors(form.gallery) }}
                         </div>
                     </div>
-
                     <div class="row">
                         <div class="col s12 m6 l3">
                             <p>Nom du nouvel objet :</p>
@@ -32,7 +31,6 @@
                             {{ form_errors(form.sgallery) }}
                         </div>
                     </div>
-
                     <div class="row">
                         <div class="col s12 m6 l3">
                             <p>Description du nouvel objet :</p>
@@ -42,7 +40,6 @@
                             {{ form_errors(form.description) }}
                         </div>
                     </div>
-
                     <div class="row">
                         <div class="col s12 m6 l3">
                             <p>prix du nouvel objet :</p>
@@ -52,7 +49,6 @@
                             {{ form_errors(form.prix) }}
                         </div>
                     </div>
-
                     <div class="row">
                         <div class="col s12 m6 l3">
                             <p>Photo du nouvel objet :</p>
@@ -60,6 +56,15 @@
                         <div class="col s12 m6 l3">
                             {{ form_widget(form.media) }}
                             {{ form_errors(form.media) }}
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col s12 m6 l3">
+                            <p>Mettre en avant :</p>
+                        </div>
+                        <div class="col s12 m6 l3">
+                            {{ form_widget(form.slider, { 'id': 'test5' }) }}
+                            {{ form_errors(form.slider) }}
                         </div>
                     </div>
 
