--- a/app/Resources/views/subgallery/list.html.twig
+++ b/app/Resources/views/subgallery/list.html.twig
@@ -7,11 +7,12 @@
 
 {% block body %}
 
-    <div id="grid" class="main">
+    <div class="container">
 
-        {% for subGallery in subGalleries %}
+    {% for subGallery in subGalleries %}
 
-            {% if subGallery is defined %}
+        {% if subGallery is defined  %}
+            <div id="grid" class="main">
 
                 <div class="view">
                     <div class="view-back">
@@ -19,41 +20,23 @@
                         <span>{{ subGallery.id }}</span>
                         <a class="modal-trigger" href="#modal1">?</a>
                     </div>
-                    <img src="{{ asset(subGallery.media.picpath) | imagine_filter('my_thumb') }}" alt="{{ subGallery.media.picname }}" class="picsize"/>
+                    {#<img src="{{ asset(subGallery.media.picpath) | imagine_filter('my_thumb') }}" alt="{{ subGallery.media.picname }}" class="picsize"/>#}
+                    <img src="{{ asset(subGallery.media.picpath) }}" alt="{{ subGallery.media.picname }}" class="picsize"/>
                 </div>
-
-            {% else %}
-
-                <div class="container">
-
-                    <div class="valign-wrapper">
-                        <h5>Nous n'avons pas trouvé votre recherche</h5>
-                    </div>
-
-                </div>
-
-            {% endif %}
-
-    </div>
-
-    <div class="container">
-        <div class="row">
-            <div class="col s12 center">
-
-                {# ################# Si L'ADMIN EST ACTIF ###########################c#}
-                {% if is_granted('ROLE_ADMIN') %}
-
-                    <a href="{{ path('subgallery_new') }}" class="btn-floating btn-large waves-effect waves-light green darken-1 modal-action modal-close bouton-new">
-                        <i class=" material-icons">add</i>
-                    </a>
-
-                {% endif %}
-                {# ################################################################## #}
 
             </div>
-        </div>
 
-    </div>
+        {% else %}
+
+            <div class="container">
+
+                <div class="valign-wrapper">
+                    <h5>Nous n'avons pas trouvé votre recherche</h5>
+                </div>
+
+            </div>
+
+        {% endif %}
 
 <!------------------------------- --------------- ------------------------------------->
 <!------------------------------- --------------- ------------------------------------->
@@ -85,10 +68,30 @@
         </div>
 
     {% endfor %}
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col s12 center">
+
+                {# ################# Si L'ADMIN EST ACTIF ###########################c#}
+                {% if is_granted('ROLE_ADMIN') %}
+
+                    <a href="{{ path('subgallery_new') }}" class="btn-floating btn-large waves-effect waves-light green darken-1 modal-action modal-close bouton-new">
+                        <i class=" material-icons">add</i>
+                    </a>
+
+                {% endif %}
+                {# ################################################################## #}
+
+            </div>
+        </div>
+    </div>
 
     <script type="text/javascript" src="{{ asset('js/effects/modernizr.custom.69142.js') }}"></script>
 
     <script type="text/javascript">
+
         Modernizr.load({test: Modernizr.csstransforms3d && Modernizr.csstransitions,
             yep : ['{{ asset('js/jquery-3.2.1.min.js') }}','{{ asset('js/effects/jquery.hoverfold.js') }}'],
             nope: '{{ asset('css/effects/fallback.css') }}',
@@ -99,7 +102,3 @@
     </script>
 
 {% endblock %}
-
-
-
-
