--- a/app/Resources/views/subgallery/list.html.twig
+++ b/app/Resources/views/subgallery/list.html.twig
@@ -16,12 +16,14 @@
 
                 <div class="view">
                     <div class="view-back">
-                        <span>{{ subGallery.sgallery }}</span>
-                        <span>{{ subGallery.id }}</span>
-                        <a class="modal-trigger" href="#modal1">?</a>
+                        {#<span>{{ subGallery.sgallery }}</span>#}
+                        {#<span>{{ subGallery.id }}</span>#}
+                        {#<a class="modal-trigger" href="#modal1">?</a>#}
                     </div>
                     {#<img src="{{ asset(subGallery.media.picpath) | imagine_filter('my_thumb') }}" alt="{{ subGallery.media.picname }}" class="picsize"/>#}
-                    <img src="{{ asset(subGallery.media.picpath) }}" alt="{{ subGallery.media.picname }}" class="picsize"/>
+                    <a class="modal-trigger" href="#modal{{ subGallery.id }}">
+                        <img src="{{ asset(subGallery.media.picpath) }}" alt="{{ subGallery.media.picname }}" class="picsize"/>
+                    </a>
                 </div>
 
             </div>
@@ -44,9 +46,9 @@
 <!------------------------------- --------------- ------------------------------------->
 <!------------------------------- --------------- ------------------------------------->
 
-        <div id="modal1" class="modal modal-fixed-footer">
+        <div id="modal{{ subGallery.id }}" class="modal modal-fixed-footer">
             <div class="modal-content">
-                <h4>{{ subGallery.sgallery }}r</h4>
+                <h4 class="center">{{ subGallery.sgallery }}</h4>
                 <p>{{ subGallery.description }}</p>
                 <p>{{ subGallery.prix }}</p>
             </div>
@@ -88,17 +90,17 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="{{ asset('js/effects/modernizr.custom.69142.js') }}"></script>
+    {#<script type="text/javascript" src="{{ asset('js/effects/modernizr.custom.69142.js') }}"></script>#}
 
-    <script type="text/javascript">
+    {#<script type="text/javascript">#}
 
-        Modernizr.load({test: Modernizr.csstransforms3d && Modernizr.csstransitions,
-            yep : ['{{ asset('js/jquery-3.2.1.min.js') }}','{{ asset('js/effects/jquery.hoverfold.js') }}'],
-            nope: '{{ asset('css/effects/fallback.css') }}',
-            callback : function( url, result, key ) {
-                if( url === '{{ asset('js/effects/jquery.hoverfold.js') }}' ) {
-                    $( '#grid' ).hoverfold();}}
-        });
-    </script>
+        {#Modernizr.load({test: Modernizr.csstransforms3d && Modernizr.csstransitions,#}
+            {#yep : ['{{ asset('js/jquery-3.2.1.min.js') }}','{{ asset('js/effects/jquery.hoverfold.js') }}'],#}
+            {#nope: '{{ asset('css/effects/fallback.css') }}',#}
+            {#callback : function( url, result, key ) {#}
+                {#if( url === '{{ asset('js/effects/jquery.hoverfold.js') }}' ) {#}
+                    {#$( '#grid' ).hoverfold();}}#}
+        {#});#}
+    {#</script>#}
 
 {% endblock %}
